--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>영상 배경 웹 사이트 실습</title>
+
+        <meta name="title" content="영상 배경 웹 사이트 실습" />
+        <meta name="description" content="배경에 동영상을 재생하는 스타일의 웹 사이트 구축 실습" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://website.com" />
+        <meta property="og:title" content="영상 배경 웹 사이트 실습" />
+        <meta property="og:description" content="배경에 동영상을 재생하는 스타일의 웹 사이트 구축 실습" />
+        <meta property="og:image" content="https://website.com/images/meta-image.png" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://website.com" />
+        <meta property="twitter:title" content="영상 배경 웹 사이트 실습" />
+        <meta property="twitter:description" content="배경에 동영상을 재생하는 스타일의 웹 사이트 구축 실습" />
+        <meta property="twitter:image" content="https://website.com/images/meta-image.png" />
 
         <link rel="preload" as="font" type="font/woff2" crossorigin="" href="./assets/fonts/SUIT-Variable.woff2">
         <link rel="stylesheet" href="./assets/css/style.css">
+
         <script src="https://kit.fontawesome.com/f67ce84ea1.js" crossorigin="anonymous"></script>
     </head>
 
@@ -152,8 +171,6 @@
                     <button type="reset" id="btnModalClose" title="Close">Close</button>
                 </footer#>
             </form> <!-- #frmAsk -->
-
-
         </dialog> <!-- modalAskForm -->
 
         <script type="module" src="./assets/scripts/base.js"></script>
